# rust-mongo

./: .env-example  Cargo.toml
src/: main.rs  paths.rs
src/handler/: mahasiswa.rs  mod.rs
