[package]
name = "rust-mongo"
version = "0.1.0"
authors = ["yudhi kusuma <yudhie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
mongodb = { version = "1.2.0", default-features = false, features=["async-std-runtime"] }
serde_json = "1.0.64"
serde_derive = "1.0.125"
futures = "0.3.13"
